--- a/plantswap/src/app/page.module.css
+++ b/plantswap/src/app/page.module.css
@@ -1,10 +1,12 @@
 .main {
   display: flex;
   flex-direction: column;
-  justify-content: space-between;
-  align-items: center;
-  padding: 6rem;
-  min-height: 100vh;
+  /* justify-content: space-between; */
+  /* align-items: center; */
+  padding: 1rem;
+  max-width: 750px;
+  margin: auto;
+  /* min-height: 100vh; */
 }
 
 .anchor {
