--- a/plantswap/src/app/globals.css
+++ b/plantswap/src/app/globals.css
@@ -3,6 +3,8 @@
   --text-color: #7d7d7d;
 
   --color-orange: #f36621;
+  --color-green: #00b894;
+  --color-white: #f1f1f1;
 
   --shadow: rgba(0, 0, 0, 0.25);
 
