--- a/plantswap/src/app/page.module.scss
+++ b/plantswap/src/app/page.module.scss
@@ -1,4 +1,4 @@
-.page {
+.page__content {
 	align-items: baseline;
 	display: flex;
 	flex-direction: column;
@@ -7,46 +7,43 @@
 	margin: auto;
 	max-width: 750px;
 
-	.homepage__content {
-		display: flex;
-		flex-direction: column;
-		justify-content: center;
-		gap: 5.5rem;
+	.homepage {
+		&__content {
+			display: flex;
+			flex-direction: column;
+			justify-content: center;
+			gap: 5.5rem;
 
-		align-items: center;
-		padding: 1rem;
-		margin: auto;
-		max-width: 750px;
+			align-items: center;
+			padding: 1rem;
+			margin: auto;
+			max-width: 750px;
 
-		section {
-			&:first-of-type {
-				align-self: self-start;
+			section {
+				&:first-of-type {
+					align-self: self-start;
 
-        h1 {
-          animation-name: gentle-appear;
-          animation-duration: 2s;
-        }
+					article {
+						animation-name: gentle-appear;
+						animation-duration: 2s;
+						animation-delay: 0.4s;
+						animation-fill-mode: backwards;
 
-        article {
-          animation-name: gentle-appear;
-          animation-duration: 2s;
-          animation-delay: 0.4s;
-          animation-fill-mode: backwards;
-          
-          p {
-            max-width: 30em;
-            margin: 2em 0;
-          }
-        }
-			}
+						p {
+							max-width: 30em;
+							margin: 2em 0;
+						}
+					}
+				}
 
-			&:last-of-type {
-				align-self: self-end;
-				animation-name: gentle-appear-reverse;
-				animation-duration: 2s;
-				animation-delay: 0.8s;
-				animation-fill-mode: backwards;
-				z-index: -1;
+				&:last-of-type {
+					align-self: self-end;
+					animation-name: gentle-appear-reverse;
+					animation-duration: 2s;
+					animation-delay: 0.8s;
+					animation-fill-mode: backwards;
+					z-index: -1;
+				}
 			}
 		}
 	}
