--- a/plantswap/src/app/page.module.scss
+++ b/plantswap/src/app/page.module.scss
@@ -1,4 +1,4 @@
-.page__content {
+.page {
 	align-items: baseline;
 	display: flex;
 	flex-direction: column;
@@ -7,7 +7,6 @@
 	margin: auto;
 	max-width: 750px;
 
-	.homepage {
 		&__content {
 			display: flex;
 			flex-direction: column;
@@ -47,7 +46,6 @@
 			}
 		}
 	}
-}
 
 @keyframes gentle-appear {
 	0% {
