:sparkles: ADD CHANGES

--- a/plantswap/components/Hero/hero.module.scss
+++ b/plantswap/components/Hero/hero.module.scss
@@ -1,20 +1,21 @@
 .hero {
-	position: relative;
-	color: firebrick;
+  position: relative;
+  color: firebrick;
+  isolation: isolate;
 
-	&__image {
-	}
+  &__image {
+    z-index: 1;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+  }
 
-	&__test {
-		position: absolute;
-		z-index: -1;
-		top: 50%;
-		left: 50%;
-		transform: translate(-50%, -40%);
-		width: 40vw;
-		min-width: 24em;
-		border-radius: 50%;
-		aspect-ratio: 1;
-		background-color: #7AA556;
-	}
+  &__test {
+    width: 35vmin;
+    min-width: 24em;
+    border-radius: 50%;
+    aspect-ratio: 1;
+    background-color: #7aa556;
+  }
 }
