--- a/plantswap/components/Title/title.module.scss
+++ b/plantswap/components/Title/title.module.scss
@@ -1,28 +1,40 @@
 $prim-color: #64ff00;
 
 .title {
-	color: var(--header-color);
+  color: var(--header-color);
 
-	&--h1 {
-		text-transform: uppercase;
-		font-weight: bolder;
-		font-size: 1.5em;
-	}
+  &--h1 {
+    text-transform: uppercase;
+    font-weight: bolder;
+    font-size: 1.5em;
+  }
 
-	&--h2 {
-		color: white;
-	}
+  &--h2 {
+    color: white;
+  }
 
-	&--red {
-		color: red;
-	}
+  &--red {
+    color: red;
+  }
 
-	&--gentle-appear {
-		animation-name: gentle-appear;
-		animation-duration: 2s;
-	}
+  &--gentle-appear {
+    animation-name: gentle-appear;
+    animation-duration: 2s;
+  }
+}
+
+@keyframes gentle-appear {
+  0% {
+    transform: translateX(-100px);
+    opacity: 0;
+  }
+
+  100% {
+    transform: translateX(0);
+    opacity: 1;
+  }
 }
 
 :export {
-	primColor: $prim-color;
+  primColor: $prim-color;
 }
