--- a/plantswap/components/Cta/cta.module.scss
+++ b/plantswap/components/Cta/cta.module.scss
@@ -8,6 +8,7 @@
   font-size: 18px;
   line-height: 1.4;
   cursor: pointer;
+  display: inline-block;
 
   &:hover {
     text-decoration: underline;
