--- a/plantswap/src/app/[lang]/page.module.scss
+++ b/plantswap/src/app/[lang]/page.module.scss
@@ -5,18 +5,18 @@
   gap: 0.5rem;
   padding: 1rem;
   margin: auto;
-  max-width: 750px;
+  // max-width: 750px;
 
   &__content {
     display: flex;
-    flex-direction: column;
+    flex-wrap: wrap;
     justify-content: center;
     gap: 5.5rem;
 
     align-items: center;
     padding: 1rem;
     margin: auto;
-    max-width: 750px;
+    // max-width: 750px;
 
     section {
       &:first-of-type {
@@ -36,12 +36,10 @@
       }
 
       &:last-of-type {
-        align-self: self-end;
         animation-name: gentle-appear-reverse;
         animation-duration: 2s;
         animation-delay: 0.8s;
         animation-fill-mode: backwards;
-        z-index: -1;
       }
     }
   }
