--- a/plantswap/components/Button/button.module.scss
+++ b/plantswap/components/Button/button.module.scss
@@ -1,4 +1,10 @@
 .button {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  align-items: center;
+  gap: 0.5rem;
+
   background-color: var(--color-orange);
   box-shadow: 0px 4px 4px var(--shadow);
   padding: 12px 22px;
