--- a/plantswap/components/FileTile/filetile.module.scss
+++ b/plantswap/components/FileTile/filetile.module.scss
@@ -1,17 +1,18 @@
 .filetile {
   --preview-size: 60px;
-  column-gap: 1rem;
+  column-gap: 0.5rem;
   display: grid;
-  grid-template-areas: "preview name" "preview size";
-  grid-template-columns: var(--preview-size) auto;
+  grid-template-areas: "preview name loader" "preview size loader";
+  grid-template-columns: var(--preview-size) auto 24px;
   border-radius: var(--border-radius);
   border: 1px solid var(--text-color);
-  padding: 1rem;
+  padding: 0.5rem;
+  align-items: center;
 
   &__name {
     grid-area: name;
     font-weight: 400;
-    margin-bottom: 0.7rem;
+    margin-bottom: 0.25rem;
   }
 
   &__size {
@@ -31,5 +32,58 @@
     border-radius: var(--border-radius);
     border: 1px solid var(--text-color);
     object-fit: cover;
+  }
+
+  &__loader {
+    grid-area: loader;
+    width: 24px;
+    height: 24px;
+    aspect-ratio: 1/1;
+    // border-radius: var(--border-radius);
+    // border: 3px solid var(--text-color);
+    object-fit: cover;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    position: relative;
+
+    &-cross {
+      transition: 200ms ease-in-out;
+      opacity: 0;
+      pointer-events: none;
+
+      &--active {
+        cursor: pointer;
+        pointer-events: all;
+        opacity: 1;
+      }
+    }
+
+    &::-webkit-progress-value {
+      background-image: -webkit-linear-gradient(
+          top,
+          rgba(255, 255, 255, 0.25),
+          rgba(0, 0, 0, 0.25)
+        ),
+        -webkit-linear-gradient(left, #09c, #f44);
+
+      border-radius: 2px;
+      background-size: var(--preview-size) var(--preview-size);
+    }
+
+    svg:nth-of-type(1) {
+      z-index: 1;
+    }
+
+    svg:nth-of-type(2) {
+      position: absolute;
+      width: calc(100% - 2px);
+      height: calc(100% - 2px);
+      stroke: var(--text-color);
+      stroke-width: 1px;
+      overflow: visible;
+      stroke-dasharray: 100;
+      stroke-dashoffset: 100;
+    }
   }
 }
