--- a/plantswap/components/Header/header.module.scss
+++ b/plantswap/components/Header/header.module.scss
@@ -1,12 +1,12 @@
 .header {
-	display: flex;
-	justify-content: space-between;
-	align-items: center;
-	padding: 20px;
-	width: 100%;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: 20px;
+  width: 100%;
 
-	&__logo {
-		height: 100%;
-		width: auto;
-	}
+  &__logo {
+    height: 100px;
+    width: auto;
+  }
 }
