--- a/plantswap/components/Uploader/uploader.module.scss
+++ b/plantswap/components/Uploader/uploader.module.scss
@@ -4,6 +4,7 @@
   padding: 1rem;
   border: 1px solid var(--text-color);
   border-radius: 10px;
+  gap: 1.5rem;
 
   &__holder {
     display: flex;
@@ -13,7 +14,6 @@
     border: 1px dashed var(--text-color);
     border-radius: 10px;
     padding: 1rem;
-    margin-bottom: 1rem;
     cursor: pointer;
   }
 
