--- a/plantswap/components/Results/results.module.scss
+++ b/plantswap/components/Results/results.module.scss
@@ -18,49 +18,74 @@
 
 .result {
   display: grid;
-  grid-template-areas: "grade img" "latin img" "name img" "btn img";
-  grid-template-columns: auto 140px;
-  //   grid-template-rows: 1fr auto auto auto;
-  justify-content: space-between;
+  // grid-template-areas: "grade img" "latin img" "name img" "btn img";
+  grid-template-columns: 2fr 4fr 3fr;
+  grid-template-rows: 1fr 1fr 1fr 1fr;
+  height: 140px;
   width: 100%;
-  padding: 1rem;
-  column-gap: 1rem;
-  border: 1px solid var(--text-color);
+  
   border-radius: var(--border-radius);
   color: var(--text-color);
+  background-color: white;
 
   &__grade {
-    grid-area: grade;
+    // grid-area: grade;
+    font-size: 14px;
     font-weight: 400;
-    margin-bottom: 0.7rem;
+    grid-row: 1;
+    grid-column: 3;
+    margin: 10px;
+
+    
+    // margin-bottom: 0.7rem;
   }
 
   &__name {
-    grid-area: name;
-    font-weight: 400;
-    margin-bottom: 0.7rem;
+    // grid-area: name;
+    grid-column: 2;
+    grid-row: 1;
+    font-size: px;
+    font-weight: 700;
+    margin: 10px;
+    // margin-bottom: 0.7rem;
   }
 
   &__latin {
-    grid-area: latin;
+    // grid-area: latin;
     font-weight: 400;
-    margin-bottom: 0.7rem;
+    // margin-bottom: 0.7rem;
+    font-size: 16px;
+    grid-column: 2;
+    grid-row: 2;
+    margin: 10px;
   }
 
   &__btn {
-    grid-area: btn;
-    font-weight: 400;
-    margin-bottom: 0.7rem;
-    max-width: 220px;
-  }
+    // grid-area: btn;
+    height: 40px; 
+    width: 140px;
+    background-color: #bebebe;
+    border-radius: 20px;
+    grid-column: 3;
+    grid-row: 2;
 
+    
+    align-self: end;
+    text-align: center;
+
+    margin: 20px 0;
+    
+  }
   &__img {
-    grid-area: img;
-    width: 100%;
-    height: 100%;
-    aspect-ratio: 1/1;
+    grid-column: 1; 
+    grid-row:  span 3;
+    
+    // grid-area: img;
+    width: 7em;
+    height: 7em;
+    
     border-radius: var(--border-radius);
-    border: 1px solid var(--text-color);
-    object-fit: cover;
+    margin: 10px;
+    // object-fit: cover;
   }
 }
