--- a/plantswap/components/Title/title.module.scss
+++ b/plantswap/components/Title/title.module.scss
@@ -10,7 +10,16 @@ $prim-color: #64ff00;
   }
 
   &--h2 {
-    color: white;
+    color: mediumvioletred;
+  }
+
+  &--h3 {
+    color: darkorchid;
+  }
+
+  &--card-size {
+    font-weight: 400;
+    font-size: 0.875em;
   }
 
   &--red {
