--- a/plantswap/components/Switcher/switcher.module.scss
+++ b/plantswap/components/Switcher/switcher.module.scss
@@ -1,19 +1,15 @@
 .plantswitcher {
   --count: 2;
-  // padding: 1rem;
   display: flex;
   flex-direction: column;
   gap: 1rem;
-  // background-color: #bababa; // fixme
 
   &__footer {
-    color: black;
-    background-color: white;
+    color: var(--color-black);
+    background-color: var(--color-white);
     display: grid;
     grid-template-areas: "old new" "cta cta";
     grid-template-columns: repeat(2, minmax(0, 1fr));
-    // justify-content: space-between;
-    // align-items: center;
     gap: 1rem;
     position: fixed;
     inset: auto 0 0 0;
