--- a/plantswap/src/app/[lang]/globals.css
+++ b/plantswap/src/app/[lang]/globals.css
@@ -2,6 +2,13 @@
   --header-color: #07060f;
   --text-color: #7d7d7d;
 
+  --primary-text-color: #212121;
+  --secondary-text-color: #ffffff;
+  --tertiary-text-color: #777777;
+
+  --wireframe-background-color: #E9E9E9;
+  --wireframe-btn-background-color: #acacac;
+
   --color-orange: #f36621;
   --color-green: #00b894;
   --color-white: #f1f1f1;
@@ -9,6 +16,7 @@
   --shadow: rgba(0, 0, 0, 0.25);
 
   --max-width: 1100px;
+  --pill-border-radius: 99px;
   --border-radius: 12px;
   --font-mono: ui-monospace, Menlo, Monaco, "Cascadia Mono", "Segoe UI Mono",
     "Roboto Mono", "Oxygen Mono", "Ubuntu Monospace", "Source Code Pro",
