--- a/plantswap/components/Button/button.module.scss
+++ b/plantswap/components/Button/button.module.scss
@@ -15,6 +15,13 @@
   line-height: 1.4;
   cursor: pointer;
 
+  &--square {
+    height: 52px;
+    width: 52px;
+    border-radius: 0;
+    box-shadow: none;
+  }
+
   &[disabled] {
     cursor: default;
   }
