ADD, Tooltip component for Forms, Detailpage, DetailpageArticle, DetailpageHeader, with dynamic background- color  and DetailpageheaderImage :sparkles:

--- a/plantswap/components/Title/title.module.scss
+++ b/plantswap/components/Title/title.module.scss
@@ -17,6 +17,14 @@ $prim-color: #64ff00;
     color: darkorchid;
   }
 
+  &--h4 {
+    color: darkslateblue;
+  }
+
+  &--h5 {
+    color: darkslategray;
+  }
+
   &--card-size {
     font-weight: 400;
     font-size: 0.875em;
