--- a/plantswap/src/app/[lang]/page.module.scss
+++ b/plantswap/src/app/[lang]/page.module.scss
@@ -29,7 +29,7 @@
           animation-fill-mode: backwards;
 
           p {
-            max-width: 30em;
+            max-width: 100%;
             margin: 2em 0;
           }
         }
