--- a/plantswap/components/SwitcherCard/switchercard.module.scss
+++ b/plantswap/components/SwitcherCard/switchercard.module.scss
@@ -7,11 +7,11 @@
   padding: 1rem;
   cursor: pointer;
 
-  &:has(input:checked) {
+  &--checked {
     background-color: var(--color-black);
 
-    & .switcher__card-name {
-      color: var(--color-white);
+    .switchercard__card-name-latin {
+      color: var(--color-white); // fixme to correct color;
     }
   }
 
@@ -19,6 +19,7 @@
     grid-area: img;
     border-radius: 0.25rem;
     width: 100%;
+    height: auto;
     aspect-ratio: 1/1;
     object-fit: cover;
   }
