--- a/plantswap/components/NavToggle/navtoggle.module.scss
+++ b/plantswap/components/NavToggle/navtoggle.module.scss
@@ -1,14 +1,12 @@
 $transition-speed: 200ms;
 
 .navtoggle {
-  display: block;
-  width: 2em;
   cursor: pointer;
   background: none;
   border: none;
   margin: 0 auto;
-  height: 52px;
-  width: 52px;
+  height: var(--header-height);
+  width: var(--header-height);
   aspect-ratio: 1/1;
   display: flex;
   flex-direction: column;
@@ -20,9 +18,8 @@ $transition-speed: 200ms;
     display: block;
     width: 100%;
     height: 2px;
-    background: white;
-    transition: all 0.5s cubic-bezier(0.4, 0.01, 0.165, 0.99);
-    transition-delay: 0s;
+    background: var(--color-white);
+    transition: all $transition-speed cubic-bezier(0.4, 0.01, 0.165, 0.99);
 
     &:first-of-type {
       transform: translateY(0px) rotate(0deg);
@@ -34,7 +31,6 @@ $transition-speed: 200ms;
   }
 }
 .nav:has(.nav__list--active) .navtoggle {
-  color: red;
   span {
     transition: all $transition-speed cubic-bezier(0.4, 0.01, 0.165, 0.99);
 
