--- a/plantswap/src/app/[lang]/globals.css
+++ b/plantswap/src/app/[lang]/globals.css
@@ -5,7 +5,7 @@
   --secondary-text-color: #ffffff;
   --tertiary-text-color: #777777;
 
-  --wireframe-background-color: #E9E9E9;
+  --wireframe-background-color: #e9e9e9;
   --wireframe-btn-background-color: #acacac;
 
   --text-color: #000000;
@@ -58,6 +58,8 @@
   --prim-color: crimson;
 
   --button-color: #000000;
+
+  --header-height: 52px;
 }
 
 @media (prefers-color-scheme: dark) {
