:art: resolved feedback

--- a/plantswap/components/NavToggle/navtoggle.module.scss
+++ b/plantswap/components/NavToggle/navtoggle.module.scss
@@ -2,7 +2,7 @@ $transition-speed: 200ms;
 
 .navtoggle {
   cursor: pointer;
-  background: none;
+  background: var(--color-white);
   border: none;
   margin: 0 auto;
   height: var(--header-height);
