--- a/plantswap/components/Nav/nav.module.scss
+++ b/plantswap/components/Nav/nav.module.scss
@@ -62,30 +62,26 @@ $transition-speed: 200ms;
   }
 
   &__toggle {
-    display: block;
-    width: 2em;
     cursor: pointer;
-    background: none;
+    background: var(--color-green);
     border: none;
     margin: 0 auto;
-    height: 52px;
-    width: 52px;
+    height: var(--header-height);
+    width: var(--header-height);
     aspect-ratio: 1/1;
     display: flex;
     flex-direction: column;
     align-items: center;
     justify-content: center;
     padding: 0.5rem;
-    background-color: #7aa556;
-    z-index: 2;
+    z-index: 1;
 
     span {
       display: block;
       width: 100%;
       height: 2px;
-      background: white;
-      transition: all 0.5s cubic-bezier(0.4, 0.01, 0.165, 0.99);
-      transition-delay: 0s;
+      background: var(--color-white);
+      transition: all $transition-speed cubic-bezier(0.4, 0.01, 0.165, 0.99);
 
       &:first-of-type {
         transform: translateY(0px) rotate(0deg);
