--- a/plantswap/components/Detailpage/detailpage.module.scss
+++ b/plantswap/components/Detailpage/detailpage.module.scss
@@ -1,5 +1,15 @@
 .detailpage {
+    background-color: var(--color-white);
+
     &__section {
         width: 100%;
+        
+        details {
+            border-bottom: 1px solid var(--color-black);
+
+            &:first-of-type {
+                border-top: 1px solid var(--color-black);
+            }
+        }
     }
 }
