--- a/plantswap/components/DetailpageHeader/detailpageheader.module.scss
+++ b/plantswap/components/DetailpageHeader/detailpageheader.module.scss
@@ -3,30 +3,24 @@ $detailpageheader-background-color: var(--plant-based-background-color);
 .detailpageheader {
     margin-bottom: var(--M-spacer);
 
-    display: flex;
+    display: grid;
+
+    place-items: center;
 
     width: 100%;
-    // height: 80dvh;
+    height: 90dvh;
 
     background-color: $detailpageheader-background-color;
 
     &__content_wrapper {
-        padding: var(--L-spacer);
+        padding: 0 var(--L-spacer);
 
         width: 100%;
-    }
+    }  
 
-    &__image_container {
-        padding-bottom: var(--M-spacer);
+    &__subtitle {
+        margin-bottom: var(--XS-spacer);
 
-        width: 100%;
-        height: 40rem;
-
-        img {
-            width: 100%;
-            height: 100%;
-
-            object-fit: cover;
-        }
-    }   
+        font-weight: 500;
+    } 
 }
