--- a/plantswap/src/app/[lang]/globals.css
+++ b/plantswap/src/app/[lang]/globals.css
@@ -18,7 +18,7 @@
   --wireframe-background-color: #e9e9e9;
   --wireframe-btn-background-color: #acacac;
 
-  --plant-based-background-color: red;
+  --plant-based-background-color: white;
 
   --text-color: #000000;
   --color-orange: #f36621;
