--- a/plantswap/components/Text/text.module.scss
+++ b/plantswap/components/Text/text.module.scss
@@ -8,11 +8,20 @@
     font-weight: 700;
   }
 
+  &--black {
+    color: var(--color-black);
+  }
+
   &--small {
     font-size: 0.875rem;
   }
 
+  &--meta {
+    font-size: 0.65rem;
+    color: #ccc;
+  }
+
   &--x-small {
-    font-size: 0.75rem;
+    font-size: 0.65rem;
   }
 }
