--- a/plantswap/components/DetailpageHeader/detailpageheader.module.scss
+++ b/plantswap/components/DetailpageHeader/detailpageheader.module.scss
@@ -10,7 +10,7 @@ $detailpageheader-background-color: var(--plant-based-background-color);
     width: 100%;
     height: 90dvh;
 
-    background-color: $detailpageheader-background-color;
+    background-color: red;
 
     &__content_wrapper {
         padding: 0 var(--L-spacer);
