--- a/plantswap/src/app/[lang]/color.css
+++ b/plantswap/src/app/[lang]/color.css
@@ -1,4 +1,31 @@
 :root {
+	/* Color mixer */
+	--color: 130;
+	--green-1: oklch(99% 0.05 var(--color));
+	--green-2: oklch(89% 0.1 var(--color));
+	--green-3: oklch(79% 0.15 var(--color));
+	--green-4: oklch(69% 0.2 var(--color));
+	--green-5: oklch(59% 0.3 var(--color));
+	--green-6: oklch(49% 0.3 var(--color));
+	--green-7: oklch(39% 0.25 var(--color));
+	--green-8: oklch(29% 0.2 var(--color));
+	--green-9: oklch(19% 0.15 var(--color));
+	--green-10: oklch(10% 0.1 var(--color)); /* darksest; */
+
+	--gray-1: oklch(99% 0 var(--color));
+	--gray-2: oklch(89% 0 var(--color));
+	--gray-3: oklch(79% 0 var(--color));
+	--gray-4: oklch(69% 0 var(--color));
+	--gray-5: oklch(59% 0 var(--color));
+	--gray-6: oklch(49% 0 var(--color));
+	--gray-7: oklch(39% 0 var(--color));
+	--gray-8: oklch(29% 0 var(--color));
+	--gray-9: oklch(19% 0 var(--color));
+	--gray-10: oklch(10% 0 var(--color)); /* darksest; */
+
+	/* https: //codepen.io/argyleink/pen/qBQBoBz?editors=0100 */
+
+	/* Spacing */
 	--XXS-spacer: 4px;
 	--XS-spacer: 8px;
 	--S-spacer: 16px;
@@ -7,40 +34,30 @@
 	--XL-spacer: 40px;
 	--XXL-spacer: 48px;
 	--XXXL-spacer: 56px;
-	
---background-light:#e1edd4;
-	--color-text: #2f1202; /* titles */
 
-	--header-color: #07060f;
+	/* Text */
+	--primary-text-color: var(--gray-9);
+	--secondary-text-color: var(--gray-1);
+	--tertiary-text-color: var(--gray-5);
+	--quaternary-text-color: var(--gray-10);
 
-	--primary-text-color: #212121;
-	--secondary-text-color: #ffffff;
-	--tertiary-text-color: #777777;
-	--quaternary-text-color: #186300;
+	/* Background */
+	--primary-background-color: var(--green-2);
+	--secondary-background-color: #f36621;
+	--tertiary-background-color: var(--green-9);
+	--quaternary-background-color: var(--green-1); /* #blauw; */
 
-	--wireframe-background-color: #e9e9e9;
-	--wireframe-btn-background-color: #acacac;
+	/* most used colors */
+	--primary-color: var(--gray-10); /* black; */
+	--secondary-color: var(--gray-1); /* white; */
+	--tertiary-color: var(--green-9); /* light gray; */
+	--quaternary-color: var(--green-1); /* #blauw; */
 
-  --plant-based-background-color: white;
+	/* Details */
+	--alert: #ff0000;
+	--header-height: 52px;
 
-	--text-color: #000000;
-	--color-orange: #f36621;
-	--color-green: #00b894;
-	--color-black: #000000;
-	--color-white: #f1f1f1;
-
-	--color-black: var(--text-color);
-
-	--max-width: 1100px;
-	--pill-border-radius: 99px;
-	--border-radius: 8px;
-	--font-mono: ui-monospace, Menlo, Monaco, 'Cascadia Mono', 'Segoe UI Mono',
-		'Roboto Mono', 'Oxygen Mono', 'Ubuntu Monospace', 'Source Code Pro',
-		'Fira Mono', 'Droid Sans Mono', 'Courier New', monospace;
-
-	--max-width: 1100px;
-	--pill-border-radius: 99px;
-	--border-radius: 12px;
+	/* Fonts */
 	--font-mono: ui-monospace, Menlo, Monaco, 'Cascadia Mono', 'Segoe UI Mono',
 		'Roboto Mono', 'Oxygen Mono', 'Ubuntu Monospace', 'Source Code Pro',
 		'Fira Mono', 'Droid Sans Mono', 'Courier New', monospace;
@@ -61,23 +78,6 @@
 		rgba(255, 255, 255, 1),
 		rgba(255, 255, 255, 0)
 	);
-
-	--tile-start-rgb: 239, 245, 249;
-	--tile-end-rgb: 228, 232, 233;
-	--tile-border: conic-gradient(
-		#00000080,
-		#00000040,
-		#00000030,
-		#00000020,
-		#00000010,
-		#00000010,
-		#00000080
-	);
-
-	--button-color: #000000;
-
-	--header-height: 52px;
-	--column-count: 1;
 }
 
 @media (prefers-color-scheme: dark) {
@@ -93,18 +93,6 @@
 			rgba(1, 65, 255, 0),
 			rgba(1, 65, 255, 0),
 			rgba(1, 65, 255, 0.3)
-		);
-
-		--tile-start-rgb: 2, 13, 46;
-		--tile-end-rgb: 2, 5, 19;
-		--tile-border: conic-gradient(
-			#ffffff80,
-			#ffffff40,
-			#ffffff30,
-			#ffffff20,
-			#ffffff10,
-			#ffffff10,
-			#ffffff80
 		);
 
 		--callout-rgb: 20, 20, 20;
@@ -130,14 +118,7 @@ body {
 
 body {
 	color: rgb(var(--foreground-rgb));
-	/* background: linear-gradient(
-      to bottom,
-      transparent,
-      rgb(var(--background-end-rgb))
-    )
-    rgb(var(--background-start-rgb)); */
-	/* background-color: #afc999; */
-	background-color: var(--background-light);
+	background-color: var(--primary-background-color);
 	transition: 1s;
 
 	min-height: 100dvh;
